--- a/app/characteristics-page.css
+++ b/app/characteristics-page.css
@@ -14,6 +14,24 @@
 }
 
 .details-services-uuid {
-  font-size: 14;
+  font-size: 12;
   padding: 10;
+}
+
+.characteristic-properties {
+  padding: 10;
+}
+
+.characteristic-property {
+  padding: 5;
+  margin-right: 10;
+  border-radius: 5;
+  background-color: #aaa;
+  color: #fff;
+}
+
+.characteristic-feedback {
+  padding-top: 20;
+  color: darkgreen;
+  font-size: 20;
 }
